--- a/opstack/Cargo.toml
+++ b/opstack/Cargo.toml
@@ -47,7 +47,7 @@ helios-consensus-core = { path = "../ethereum/consensus-core" }
 axum = "0.7.6"
 clap = { version = "4.5.4", features = ["derive", "env"] }
 # networking
-libp2p = { version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping"] }
+libp2p = { version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping", "identify"] }
 discv5 = "0.7.0"
 libp2p-identity = { version = "0.1.2", features = ["secp256k1"] }
 unsigned-varint = "0.7.1"
