--- a/opstack/Cargo.toml
+++ b/opstack/Cargo.toml
@@ -47,9 +47,10 @@ helios-consensus-core = { path = "../ethereum/consensus-core" }
 axum = "0.8"
 clap = { version = "4.5.4", features = ["derive", "env"] }
 # networking
-libp2p = { version = "0.51.3", features = ["macros", "tokio", "tcp", "mplex", "noise", "gossipsub", "ping", "identify"] }
-discv5 = "0.7.0"
-libp2p-identity = { version = "0.1.2", features = ["secp256k1"] }
+libp2p = { version = "0.55.0", features = ["macros", "tokio", "tcp", "noise", "gossipsub", "ping", "identify"] }
+discv5 = "0.9.1"
+libp2p-identity = { version = "0.2.10", features = ["secp256k1"] }
+libp2p-mplex = "0.43.0"
 unsigned-varint = "0.7.1"
 
 [target.wasm32-unknown-unknown.dependencies]
